--- a/docs/.vitepress/theme/style/style.css
+++ b/docs/.vitepress/theme/style/style.css
@@ -30,13 +30,22 @@
  * -------------------------------------------------------------------------- */
 
  :root {
-  --vp-c-brand: #646cff;
-  --vp-c-brand-light: #747bff;
-  --vp-c-brand-lighter: #9499ff;
-  --vp-c-brand-lightest: #bcc0ff;
-  --vp-c-brand-dark: #535bf2;
-  --vp-c-brand-darker: #454ce1;
-  --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
+  animation: rainbow 15s ease 0s infinite;
+  --vp-c-gutter: var(--vp-c-divider);
+  --vp-code-block-bg: rgba(125, 125, 125, 0.04);
+  --vp-code-tab-divider: var(--vp-c-divider);
+  --vp-code-copy-code-bg: rgba(125, 125, 125, 0.1);
+  --vp-code-copy-code-hover-bg: rgba(125, 125, 125, 0.2);
+  --vp-c-disabled-bg: rgba(125, 125, 125, 0.2);
+  --vp-code-tab-text-color: var(--vp-c-text-2);
+  --vp-code-tab-active-text-color: var(--vp-c-text-1);
+  --vp-code-tab-hover-text-color: var(--vp-c-text-text-2);
+  --vp-code-copy-code-active-text: var(--vp-c-text-2);
+
+  /* 搜索 */
+  --vp-local-search-highlight-text: var(--vp-c-brand-lighter);
+  --vp-local-search-highlight-bg: '';
+  transition: background-color 0.25s ease, border-color 0.25s ease;
 }
 
 /**base blue color*/
@@ -72,14 +81,14 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
-    #168AAD 30%,
-    #76C893
+    var(--vp-c-brand) 30%,
+    var(--vp-c-brand-next)
   );
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #76C893 50%,
-    #168AAD 50%
+    var(--vp-c-brand) 30%,
+    var(--vp-c-brand-next)
   );
   --vp-home-hero-image-filter: blur(40px);
 }
